# zeeedit

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml
benchmarks/: Benchmarks.cpp
source/: AudioStub.cpp  AudioStub.h  CMakeLists.txt  NumericType.h  ParameterMap.cpp  ParameterMap.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginProcessorBase.cpp  PluginProcessorBase.h  ProgramMap.cpp  ProgramMap.h  ThreadSafeQueue.h  ZeeEdit.cpp  ZeeEdit.h
source/GUI/: LayoutProcessor.cpp  LayoutProcessor.h  MidiParameterMap.cpp  MidiParameterMap.h  WidgetPanel.cpp  WidgetPanel.h  WidgetWithLabel.h  ZeeEditGui.cpp  ZeeEditGui.h
tests/: PluginBasics.cpp  ThreadSafeQueueTest.cpp
tests/ReaperTestProject/: TestProject.rpp
tests/helpers/: test_helpers.h
